RESOLVED FIXED310328
[JSC][WASM][Debugger] Fix WASM debugger stop-the-world races during VM construction and destruction
https://bugs.webkit.org/show_bug.cgi?id=310328
Summary [JSC][WASM][Debugger] Fix WASM debugger stop-the-world races during VM constr...
Yijia Huang
Reported 2026-03-19 21:43:37 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-03-19 21:43:44 PDT
Yijia Huang
Comment 2 2026-03-19 21:49:37 PDT
EWS
Comment 3 2026-03-25 22:28:15 PDT
Committed 309965@main (d6d27c0ed374): <https://commits.webkit.org/309965@main> Reviewed commits have been landed. Closing PR #60981 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.