Source/JavaScriptCore/runtime/VM.cpp
@@ -172,6 +172,10 @@
 #include <wtf/darwin/DispatchExtras.h>
 #endif
 
+#if ENABLE(WEBASSEMBLY_DEBUGGER)
+#include "WasmDebugServerUtilities.h"
+#endif
+
 #include <span>
 
 namespace JSC {
@@ -226,25 +230,6 @@ void VM::computeCanUseJIT()
 #endif
     g_jscConfig.vm.canUseJIT = VM::canUseAssembler() && Options::useJIT();
 #endif
-}
-
-// This function is not meant to be called by anyone. It just provides a convenient scope
-// that can is permitted to access private members of VM in order to do some needed
-// static_asserts.
-inline void VM::checkStaticAsserts()
-{
-    // VM registration is done in the instantiation of its VMThreadContext.
-    //
-    // VM registration with the VMManager can only be done after m_apiLock is initialized
-    // because VMManager may trigger traps to stop the VM, and VMTraps the which uses
-    // m_apiLock for the VMTraps::SignalSender uses m_apiLock.
-    //
-    // VM registration needs to be done before the heap is initialized because we may Global GC
-    // may want to block the VM from doing any heap activity. In a Global GC world, we would be
-    // binding this VM to the global heap instead of instantiating the heap field. We want to
-    // be able to block before that point.
-    static_assert(OBJECT_OFFSETOF(VM, m_apiLock) < OBJECT_OFFSETOF(VM, m_threadContext));
-    static_assert(OBJECT_OFFSETOF(VM, m_threadContext) < OBJECT_OFFSETOF(VM, heap));
 }
 
 static bool vmCreationShouldCrash = false;
@@ -515,6 +500,10 @@ WTF_ALLOW_UNSAFE_BUFFER_USAGE_END
     // We must set this at the end only after the VM is fully initialized.
     WTF::storeStoreFence();
     m_isInService = true;
+
+    // Register after all VM state is initialized so that a stop-the-world triggered
+    // immediately on registration sees a fully constructed VM.
+    VMManager::singleton().notifyVMConstruction(*this);
 }
 
 static ReadWriteLock s_destructionLock;
@@ -531,6 +520,10 @@ void VM::setCrossTaskToken(RefPtr<CrossTaskToken>&& token)
 
 VM::~VM()
 {
+    // Remove from VMManager before marking as no longer in service or cancelling traps,
+    // so requestStopAllInternal() never iterates a VM with m_isShuttingDown set.
+    VMManager::singleton().notifyVMDestruction(*this);
+
     Locker destructionLocker { s_destructionLock.read() };
 
     if (vmType == VMType::Default)
