Source/JavaScriptCore/runtime/VMManager.cpp
@@ -48,21 +48,8 @@ VMManager& VMManager::singleton()
     return manager.get();
 }
 
-VMThreadContext::VMThreadContext()
-{
-    VM* vm = VM::fromThreadContext(this);
-    // Ensure that VM is not in-service yet. Since notifyVMConstruction has memory barrier (lock),
-    // if we are ensuring this condition here, concurrent threads will see this consistent state.
-    // Make sure m_isInService is initialized to false before VMThreadContext is initialized.
-    RELEASE_ASSERT(!vm->isInService());
-    VMManager::singleton().notifyVMConstruction(*vm);
-}
-
-VMThreadContext::~VMThreadContext()
-{
-    VM* vm = VM::fromThreadContext(this);
-    VMManager::singleton().notifyVMDestruction(*vm);
-}
+VMThreadContext::VMThreadContext() = default;
+VMThreadContext::~VMThreadContext() = default;
 
 bool VMManager::isValidVMSlow(VM* vm)
 {
@@ -142,7 +129,7 @@ auto VMManager::info() -> Info
     Locker lock { manager.m_worldLock };
     info.numberOfVMs = manager.m_numberOfVMs;
     info.numberOfActiveVMs = manager.m_numberOfActiveVMs;
-    info.numberOfStoppedVMs = manager.m_numberOfStoppedVMs.loadRelaxed();
+    info.numberOfStoppedVMs = manager.m_numberOfStoppedVMs;
     info.worldMode = manager.m_worldMode;
     info.targetVM = manager.m_targetVM;
     return info;
@@ -165,10 +152,7 @@ void VMManager::setMemoryDebuggerCallback(StopTheWorldCallback callback)
 
 void VMManager::incrementActiveVMs(VM& vm) WTF_REQUIRES_LOCK(m_worldLock)
 {
-    if (m_worldMode == Mode::RunAll) {
-        RELEASE_ASSERT(m_numberOfActiveVMs == invalidNumberOfActiveVMs);
-        return;
-    }
+    RELEASE_ASSERT(m_worldMode != Mode::RunAll);
 
     if (!vm.traps().m_hasBeenCountedAsActive) {
         m_numberOfActiveVMs++;
@@ -190,7 +174,7 @@ void VMManager::decrementActiveVMs(VM& vm) WTF_REQUIRES_LOCK(m_worldLock)
         vm.traps().m_hasBeenCountedAsActive = false;
     }
 
-    auto shouldResumeAll = [&] {
+    auto shouldResumeAll = [&] WTF_REQUIRES_LOCK(m_worldLock) {
         if (m_worldMode != Mode::RunAll && !m_numberOfActiveVMs)
             return true;
         if (m_worldMode == Mode::RunOne) {
@@ -351,7 +335,23 @@ void VMManager::notifyVMStop(VM& vm, StopTheWorldEvent event)
     // counted (entry services succeeded), this does nothing.
     {
         Locker lock { m_worldLock };
+        // Guard against a late-arriving notifyVMStop() after resumeTheWorld() has already
+        // completed. Once the world is back in RunAll, touching the counters would corrupt
+        // the m_numberOfStoppedVMs == m_numberOfActiveVMs invariant used in the following stop section.
+        if (m_worldMode == Mode::RunAll)
+            return;
+
         incrementActiveVMs(vm);
+        ++m_numberOfStoppedVMs;
+
+        // Must be inside this lock. Once m_numberOfStoppedVMs == m_numberOfActiveVMs,
+        // the STW callback fires and the debugger assumes isStopped() on every VM.
+        // A VM preempted between releasing this lock and calling setStopped() would
+        // cause isStopped() to return false after the STW callback fires.
+#if ENABLE(WEBASSEMBLY_DEBUGGER)
+        if (Options::enableWasmDebugger()) [[unlikely]]
+            vm.debugState()->setStopped();
+#endif
     }
 
     // Due to races, we may end up calling notifyVMStop() even when there is no stop to be serviced.
@@ -365,19 +365,12 @@ void VMManager::notifyVMStop(VM& vm, StopTheWorldEvent event)
     // called when in Mode::RunOne because new VM thread can be started, and we want those new
     // threads to also stop since they aren't the targetVM thread.
 
-#if ENABLE(WEBASSEMBLY_DEBUGGER)
-    bool enableWasmDebugger = Options::enableWasmDebugger();
-    if (enableWasmDebugger) [[unlikely]]
-        vm.debugState()->setStopped();
-#endif
-
-    m_numberOfStoppedVMs.exchangeAdd(1);
 
     for (;;) {
         {
             Locker lock { m_worldLock };
 
-            RELEASE_ASSERT(m_numberOfStoppedVMs.loadRelaxed() <= m_numberOfActiveVMs);
+            RELEASE_ASSERT(m_numberOfStoppedVMs <= m_numberOfActiveVMs);
 
             auto fetchTopPriorityStopReason = [&] {
                 auto pendingRequests = m_pendingStopRequestBits.loadRelaxed();
@@ -401,7 +394,7 @@ void VMManager::notifyVMStop(VM& vm, StopTheWorldEvent event)
                 // below.
             }
 
-            auto shouldStop = [&] {
+            auto shouldStop = [&] WTF_REQUIRES_LOCK(m_worldLock) {
                 // 1. If the targetVM is already selected, and we're not the targetVM, then stop.
                 //    We need to check this first because in RunOne mode, even if there is no more
                 //    STW request to service, any VM that is not the targetVM still needs to stop.
@@ -415,7 +408,9 @@ void VMManager::notifyVMStop(VM& vm, StopTheWorldEvent event)
 
                 // 3. We have a STW request. If not all active VMs are at the stopping point yet,
                 //    then stop and wait for the last VM to stop.
-                return m_numberOfStoppedVMs.loadRelaxed() != m_numberOfActiveVMs;
+                //    FIXME: rdar://173360944 Any VM may serve the STW callback, not just the last to stop,
+                //    since once the counter lock above is released, any VM can observe m_numberOfStoppedVMs == m_numberOfActiveVMs.
+                return m_numberOfStoppedVMs != m_numberOfActiveVMs;
             };
 
             while (shouldStop())
@@ -487,20 +482,24 @@ void VMManager::notifyVMStop(VM& vm, StopTheWorldEvent event)
         }
     }
 
+    unsigned numberOfStoppedVMs = UINT_MAX;
+
+    {
+        Locker lock { m_worldLock };
+
+        // If we get here, we're either transitioning to RunOne or Running mode.
+        RELEASE_ASSERT(!m_targetVM || m_targetVM == &vm);
+
+        numberOfStoppedVMs = --m_numberOfStoppedVMs;
+
 #if ENABLE(WEBASSEMBLY_DEBUGGER)
-    if (enableWasmDebugger) [[unlikely]] {
-        vm.debugState()->clearStop();
-        WTF::storeLoadFence();
-    }
+        if (Options::enableWasmDebugger()) [[unlikely]]
+            vm.debugState()->clearStop();
 #endif
-
-    auto previousCount = m_numberOfStoppedVMs.exchangeSub(1);
-
-    // If we get here, we're either transitioning to RunOne or Running mode.
-    RELEASE_ASSERT(!m_targetVM || m_targetVM == &vm);
+    }
 
     // Call post-resume callback once when last VM exits and all VMs are running.
-    if (previousCount == 1 && m_needsWasmDebuggerOnResume.exchange(false))
+    if (!numberOfStoppedVMs && m_needsWasmDebuggerOnResume.exchange(false))
         g_jscConfig.wasmDebuggerOnResume();
 }
 
@@ -518,7 +517,6 @@ void VMManager::notifyVMConstruction(VM& vm)
         // If a stop is in progress, we cannot proceed onto initializing (i.e. mutating)
         // the heap in the VM constructor. GlobalGC may be expecting a quiescent world
         // state at this point. So, go park this thread if needed.
-        vm.requestStop();
         notifyVMStop(vm, StopTheWorldEvent::VMCreated); // Cannot be called while holding m_worldLock.
 
         Locker locker { m_worldLock };
@@ -555,10 +553,8 @@ void VMManager::notifyVMActivation(VM& vm)
         s_recentVM = &vm;
         needsStopping = m_worldMode != Mode::RunAll;
     }
-    if (needsStopping) {
-        vm.requestStop();
+    if (needsStopping)
         notifyVMStop(vm, StopTheWorldEvent::VMActivated);
-    }
 }
 
 void VMManager::notifyVMDeactivation(VM& vm)
